--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -20,12 +20,12 @@
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <td>1</td>
-    <td>Холодов</td>
-    <td>Даниил</td>
-    <td>Александрович</td>
-    <td>город Москва</td>
+  <tr *ngFor="let user of userData">
+    <td>{{user.id}}</td>
+    <td>{{user.lastName}}</td>
+    <td>{{user.firstName}}</td>
+    <td>{{user.fathersName}}</td>
+    <td>{{user.address}}</td>
     <td>
       <button class="btn btn-info">Изменить</button>
       <button class="btn btn-danger mx-3">Удалить</button>
@@ -63,8 +63,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-        <button type="button" class="btn btn-primary">Добавить</button>
+        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button" (click)="postUserDetails()"  class="btn btn-primary">Добавить</button>
       </div>
     </div>
   </div>
