Добавлена возможность удалять пользователей

--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -27,8 +27,8 @@
     <td>{{user.fathersName}}</td>
     <td>{{user.address}}</td>
     <td>
-      <button class="btn btn-info">Изменить</button>
-      <button class="btn btn-danger mx-3">Удалить</button>
+      <button class="btn btn-info" >Изменить</button>
+      <button class="btn btn-danger mx-3" (click)="deleteUser(user)">Удалить</button>
     </td>
   </tr>
   </tbody>
@@ -63,7 +63,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button"  id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
         <button type="button" (click)="postUserDetails()"  class="btn btn-primary">Добавить</button>
       </div>
     </div>
