--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <h1>Выпускной проект</h1>
     <div class="d-flex">
-      <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success">
+      <button type="button" (click)="clickAddUser()" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success">
         Добавить пользователя</button>
     </div>
   </div>
@@ -65,7 +65,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-        <button type="button" (click)="postUserDetails()"  class="btn btn-primary">Добавить</button>
+        <button type="button" *ngIf="showAdd" (click)="postUserDetails()"  class="btn btn-primary">Добавить</button>
+        <button type="button" *ngIf="showUpdate" (click)="updateUserDetails()"  class="btn btn-primary">Обновить</button>
       </div>
     </div>
   </div>
