--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -9,7 +9,7 @@
   </div>
 </nav>
 <div class="table-responsive">
-  <ion-content>
+  <cdk-virtual-scroll-viewport #scroller class="content" [itemSize]="70">
 <table class="table">
   <thead>
   <tr>
@@ -22,7 +22,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let user of userData">
+  <tr *cdkVirtualFor="let user of userData">
     <td>{{user.id}}</td>
     <td>{{user.lastName}}</td>
     <td>{{user.firstName}}</td>
@@ -36,13 +36,7 @@
   </tr>
   </tbody>
 </table>
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="Loading more data...">
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-  </ion-content>
+  </cdk-virtual-scroll-viewport>
 </div>
 
 
