--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -39,8 +39,6 @@
   </cdk-virtual-scroll-viewport>
 </div>
 
-
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -71,7 +69,7 @@
           </div>
           <div class="mb-3">
             <label for="address" class="form-label">Адрес</label>
-            <ngx-dadata style="background-color: white " [config]="configAddress"  formControlName="address" class="form-control" id="address"></ngx-dadata>
+            <ngx-dadata  [config]="configAddress"  formControlName="address" class="form-control" id="address"></ngx-dadata>
             <span *ngIf="f['address'].getError('required') != null" class="errormesage">Введите Адрес</span>
           </div>
           <div class="modal-footer">
@@ -84,4 +82,8 @@
     </div>
   </div>
 </div>
+
+
+
+
 
