--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Информация пользователя</h5>
+        <h3>Информация пользователя</h3>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
