Исправлен баг с получением данных

--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -45,7 +45,7 @@
   [showAdd]="showAdd"
   [showUpdate]="showUpdate"
   [userObj]="userObj"
-  [userData]="userData">
+   (userDataUpdate)="updateUserData($event)" >
 </app-modal>
 
 
