--- a/src/app/usersdashboard/usersdashboard.component.html
+++ b/src/app/usersdashboard/usersdashboard.component.html
@@ -29,7 +29,7 @@
     <td>{{user.fathersName}}</td>
     <td>{{user.address}}</td>
     <td>
-      <button class="btn pl-0" (click)="onEdit(user)" type="button" data-bs-toggle="modal"
+      <button class="btn" (click)="onEdit(user)" type="button" data-bs-toggle="modal"
               data-bs-target="#exampleModal" class="btn">Изменить</button>
       <button class="btn" (click)="deleteUser(user)">Удалить</button>
     </td>
